2005.11.23
--------
- remove most of the null values from the EnumCols

2005.11.22
---------
- forgot to fix the VernacularName editor
- made ABCD export and more xml safe

2005.11.20
---------
- fixed bug when trying to cancel importing CSV files
- the combined plant_id and accession_id of Plant now have to be unique
- removed most of the None default values from the EnumCols
- release 0.1.1


2005.11.19
---------
- fixed some logic in editor.py so that the editor dialog acts as expected
when you close it
- fixed the donor editor so it works correctly
- registered the 'donor' and 'don' keywords for the search view
- made some dummy classes for DonorInfoBox and its expanders, now it just
needs to be filled in
- Ctrl-l now correctly gives focus to the search entry, to do this i had to
move the part that sets the current_view in the gui into app.main()
- other small fixes i can't remember
- disabled the MySQL importer
- a new table was added to the database to keep information about the database,
right now it just hold the version of the database and the datetime it was 
created
- will give a warning if trying to connect to a database with different 
major and minor numbers than the software
- will not connect to a database that doesn't have a 'bauble' table in the
database
- fixed some win32 problems
- fixed problem with create the first database at a connection
- message dialog from utils now accept markup
- fixed a problem in imex_csv when creating a database before the gui
has been started
- changed setup.py to use the new formatter module instead of
the old labels ones
- released 0.1.0


2005.11.13
---------
- fixed adding donors from the donation editor


2005.11.12
---------
- searchview parser now uses pyparser and can now handle more complex queries
though some work still needs to be done

2005.11.5
----------
- lots of fixes related to the Donor table and DonorEditor

2005.11.3
----------