@@ -179,84 +179,7 @@ class _prefs(dict):
 #        
 #        pass
 
-
-# TODO: should just make this a static class named prefs though i don't know
-# though i don't know how well this would work access the dict superclass of
-# the class, have a dict in the module and module level functions to manipulate
-# it like we do in plugins
-#class _prefs2(dict):
-#    """
-#    handles the loading, storing, getting and settings of preferences
-#    uses the Borg design patter so that all instances share the same data
-#    NOTE: if you expect a list with one item then the list should be written
-#    like (item,) witha trailing comma or it will get interpreted as string
-#    """
-#    
-#    # preference keys
-#    conn_default_pref = "conn.default"
-#    conn_list_pref = "conn.list"
-#
-#    _loaded = False
-#    _filename = default_prefs_file    
-#    
-#    def __init__(self):
-#        if not os.path.exists(self._filename):
-#            path, file = os.path.split(self._filename)
-#            if not os.path.exists(path):
-#                os.mkdir(path)
-#            f = open(self._filename, "w") # touch
-#            f.close() 
-#        
-#
-#    def load(self, filename=_filename):
-#        self._loaded=True
-#        # TODO: if this is loaded after  the user has set some preferences
-#        # then those preferences could be overwritten, need to set some
-#        # sort of flag to not overwrite preferences
-#        # it's a bit early to set this but set_pref won't work otherwise
-#        try:
-#            execfile(filename)        
-#        except: 
-#            msg = "Could not load preferences file: " + filename
-#            utils.message_dialog(msg, gtk.MESSAGE_ERROR)
-#            raise
-#        else:
-#            self._loaded=True
-#
-#
-#    def save(self, filename=_filename):
-#        # TODO: open and backup old file in case something goes wrong
-#        # then we can restore the preferences instead of losing them
-#        f = open(filename, "w") # open, truncate
-#        template = 'set_pref("%s", %s)\n'
-#        for key in sorted(self.keys()):
-#            value = self[key]
-#            if type(value) == str: 
-#                value = '"%s"' % value
-#            p = template % (key, value)
-#            f.write(p)
-#    
-#
-#    def __getitem__(self, key):
-#        if not self._loaded:
-#            raise Exception("Preference not loaded")
-#        if not self.has_key(key): 
-#            return None
-#        return dict.__getitem__(self, key)
-#        
-#        
-#    def __setitem__(self, key, value):
-#        if not self._loaded:
-#            raise Exception("Preference not loaded")
-#        else:
-#            dict.__setitem__(self, key, value)
             
-
 prefs = _prefs()
 
-# should only be used by the preferences file
-#def set_pref(key, value):
-#    prefs[key] = value
-
-#prefs.load()
 
